bk_ida/gccida/c1/rtl_for_decl_location
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtl_for_decl_location/src/dwarf2out.c:9316:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v8] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtl_for_decl_location/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/rtl_for_decl_location/src/obj/dwarf2out.o] Error 1
